@@ -218,9 +218,9 @@ class IBPSA(object):
             if len(pat) is not 2:
                 ValueError("Pattern {} is not supported.".format(pattern))
             # Make sure it has the same number of directories
-            ret = filter(lambda x: (x.count(os.path.sep) == pattern.count(os.path.sep))
-                         and x.startswith(pat[0])
-                         and x.endswith(pat[1]),
+            ret = filter(lambda x: (x.count(os.path.sep) == pattern.count(os.path.sep)) and
+                         x.startswith(pat[0]) and
+                         x.endswith(pat[1]),
                          file_list)
             return list(ret)
         else:
