@@ -94,8 +94,8 @@ def runSimulation(worDir, cmd):
             else:
                 return 0
         except OSError as e:
-            sys.stderr.write("Execution of '" + " ".join(map(str, cmd)) + " failed.\n"
-                             + "Working directory is '" + worDir + "'.")
+            sys.stderr.write("Execution of '" + " ".join(map(str, cmd)) + " failed.\n" +
+                             "Working directory is '" + worDir + "'.")
             raise(e)
         except KeyboardInterrupt as e:
             pro.kill()
@@ -1401,9 +1401,9 @@ class Tester(object):
         for i in range(len(yInt)):
             errAbs[i] = abs(yOld[i] - yInt[i])
             if np.isnan(errAbs[i]):
-                raise ValueError('NaN in errAbs ' + varNam + " " + str(yOld[i])
-                                 + "  " + str(yInt[i]) + " i, N " + str(i) + " --:" + str(yInt[i - 1])
-                                 + " ++:", str(yInt[i + 1]))
+                raise ValueError('NaN in errAbs ' + varNam + " " + str(yOld[i]) +
+                                 "  " + str(yInt[i]) + " i, N " + str(i) + " --:" + str(yInt[i - 1]) +
+                                 " ++:", str(yInt[i + 1]))
             if (abs(yOld[i]) > 10 * tol):
                 errRel[i] = errAbs[i] / abs(yOld[i])
             else:
@@ -1716,8 +1716,8 @@ class Tester(object):
         """
         import numpy as np
         if not (isinstance(dataSeries, np.ndarray) or isinstance(dataSeries, list)):
-            raise TypeError("Program error: dataSeries must be a numpy.ndarr or a list. Received type "
-                            + str(type(dataSeries)) + ".\n")
+            raise TypeError("Program error: dataSeries must be a numpy.ndarr or a list. Received type " +
+                            str(type(dataSeries)) + ".\n")
         return (len(dataSeries) == 2)
 
     def format_float(self, value):
@@ -2750,8 +2750,8 @@ class Tester(object):
         def _write_translation_stats(runFil, values):
 
             # Close the bracket for the JSON object
-            runFil.write("""Modelica.Utilities.Streams.print("      }", """
-                         + '"' + values['statisticsLog'] + '"' + ");\n")
+            runFil.write("""Modelica.Utilities.Streams.print("      }", """ +
+                         '"' + values['statisticsLog'] + '"' + ");\n")
 
         def _print_end_of_json(isLastItem, fileHandle, logFileName):
             if isLastItem:
@@ -2886,8 +2886,8 @@ class Tester(object):
                             "translationLog": os.path.join(
                                 self._temDir[iPro],
                                 self.getLibraryName(),
-                                self._data[i]['model_name']
-                                + ".translation.log").replace(
+                                self._data[i]['model_name'] +
+                                ".translation.log").replace(
                                 "\\",
                                 "/"),
                             "simulatorLog": self._simulator_log_file.replace(
@@ -2911,8 +2911,20 @@ class Tester(object):
                         ########################################################################
                         # Write line for model check
                         if self._modelica_tool == 'dymola':
+                            model_name = values["model_name"]
+                            if model_name.startswith(
+                                    "Obsolete.", model_name.find(".") + 1):
+                                # This model is in IBPSA.Obsolete, or Buildings.Obsolete etc.
+                                values["set_non_pedantic"] = "Advanced.PedanticModelica = false;\n"
+                                values["set_pedantic"] = "Advanced.PedanticModelica = true;\n"
+                            else:  # Set to empty string as for non-obsolete models, we don't switch to non-pedantic mode
+                                values["set_non_pedantic"] = ""
+                                values["set_pedantic"] = ""
+
                             template = r"""
+    {set_non_pedantic}
     rCheck = {checkCommand};
+    {set_pedantic}
     Modelica.Utilities.Streams.print("    {{ \"file\" :  \"{mosWithPath}\",", "{statisticsLog}");
     Modelica.Utilities.Streams.print("      \"model\" : \"{model_name}\",", "{statisticsLog}");
     Modelica.Utilities.Streams.print("      \"check\" : {{", "{statisticsLog}");
@@ -2935,7 +2947,9 @@ class Tester(object):
                             # The stack of functions is:
                             # Modelica.Utilities.Streams.readFile
                             template = r"""
+    {set_non_pedantic}
     rScript=RunScript("Resources/Scripts/Dymola/{scriptFile}");
+    {set_pedantic}
     savelog("{model_name}.translation.log");
     if Modelica.Utilities.Files.exist("dslog.txt") then
       Modelica.Utilities.Files.move("dslog.txt", "{model_name}.dslog.log");
@@ -3488,7 +3502,7 @@ class Tester(object):
              <BLANKLINE>
              <BLANKLINE>
              ######################################################################
-             Tested 4 models:
+             Tested 5 models:
                * 0 compiled successfully (=0.0%)
              <BLANKLINE>
              Successfully checked models:
@@ -3497,6 +3511,7 @@ class Tester(object):
                * BuildingsPy.buildingspy.tests.MyModelicaLibrary.Examples.Constants
                * BuildingsPy.buildingspy.tests.MyModelicaLibrary.Examples.MyStep
                * BuildingsPy.buildingspy.tests.MyModelicaLibrary.Examples.ParameterEvaluation
+               * BuildingsPy.buildingspy.tests.MyModelicaLibrary.Obsolete.Examples.Constant
              <BLANKLINE>
              More detailed information is stored in self._omstats
              ######################################################################
@@ -3565,8 +3580,8 @@ class Tester(object):
                 return retcode
 
         except OSError as e:
-            raise OSError("Execution of omc +d=initialization " + mosfile + " failed.\n"
-                          + "Working directory is '" + worDir + "'.")
+            raise OSError("Execution of omc +d=initialization " + mosfile + " failed.\n" +
+                          "Working directory is '" + worDir + "'.")
         else:
             # process the log file
             print("Logfile created: {}".format(logFilNam))
