@@ -1,0 +1,3 @@
+within MyModelicaLibrary.Obsolete;
+package Examples "Package with example models"
+end Examples;
