@@ -1,0 +1,3 @@
+within MyModelicaLibrary;
+package Obsolete "Package with obsolete models"
+end Obsolete;
